--- a/Exercicios/ex001/ex001.html
+++ b/Exercicios/ex001/ex001.html
@@ -10,6 +10,7 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Já me livrei da mandição.</p>
+    <!--Primeiros comandos em JavaScript -->
     <script>     
         window.alert('Minha primeira mensagem!')
         window.confirm('Está gostando de JavaScript?')
