ex003 - Conversão de variáveis (de string para inteiro)

--- a/Exercicios/ex003/ex003.html
+++ b/Exercicios/ex003/ex003.html
@@ -14,10 +14,10 @@
     <script>     
        // var n1 = Number.parseInt(window.prompt("Digite um número: "))
        // var n1 = Number.parseFloat(window.prompt("Digite um número: "))
-       var n1 = Number(window.prompt("Digite um número: "))
+       var n1 = Number(window.prompt("Digite um número: ")) //comando simplificado ->Number(n)
        // var n2 = Number.parseInt(window.prompt("Digite mais um número: "))
        // var n2 = Number.parseFloat(window.prompt("Digite um número: "))
-       var n2 = Number(window.prompt("Digite mais um número: "))
+       var n2 = Number(window.prompt("Digite mais um número: ")) //comando simplificado ->Number(n)
        var s = n1+n2
        window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}`) // Template string
     </script>
