--- a/Aulas/aula27 - métodos de strings/index.html
+++ b/Aulas/aula27 - métodos de strings/index.html
@@ -6,6 +6,9 @@
     <title>Métodos de Strings</title>
 </head>
 <body>
+    <h1>Teste</h1>
+
+    <p id="teste"></p>
     
     <script src="metodos-strings.js"></script>
 </body>
