Aula26 - Métodos numéricos

--- a/Aulas/aula26 - métodos numéricos/index.html
+++ b/Aulas/aula26 - métodos numéricos/index.html
@@ -6,6 +6,9 @@
     <title>Métodos Numéricos</title>
 </head>
 <body>
+    <h1>Métodos Numéricos</h1>
+
+    <p id="teste"></p>
     
     <script src="metodos-numericos.js"></script>
 </body>
