--- a/Aulas/aula10 - arrays/index.html
+++ b/Aulas/aula10 - arrays/index.html
@@ -6,7 +6,10 @@
     <title>Arrays</title>
 </head>
 <body>
-    
+    <h1>Arrays</h1>
+
+    <p id="teste"></p>
+
     <script src="arrays.js">
         
     </script>
