Aula30 - Métodos de Array 2

--- a/Aulas/aula30 - métodos da array 2/index.html
+++ b/Aulas/aula30 - métodos da array 2/index.html
@@ -6,6 +6,9 @@
     <title>Métodos de Arrays parte 2</title>
 </head>
 <body>
+    <h1>Métodos de Array - Parte 2</h1>
+
+    <p id="teste"></p>
     
     <script src="metodos-array.js"></script>
 </body>
